flux/dialogporten/base/apps/service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service
  labels:
    app.kubernetes.io/name: service
    app.kubernetes.io/part-of: dialogporten
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: service
  template:
    metadata:
      labels:
        app.kubernetes.io/name: service
        app.kubernetes.io/part-of: dialogporten
    spec:
      serviceAccountName: service
      containers:
        - name: service
          image: ghcr.io/altinn/dialogporten-service:set-by-ci
          ports:
            - containerPort: 8080
          startupProbe:
            httpGet:
              path: /health/startup
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              path: /health/readiness
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 5
            timeoutSeconds: 2
          livenessProbe:
            httpGet:
              path: /health/liveness
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 5
            timeoutSeconds: 2
